--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-router-dom": "^6.8.1",
     "axios": "^1.3.4",
     "react-query": "^3.39.3",
@@ -16,7 +16,7 @@
     "react-hot-toast": "^2.4.0",
     "tailwindcss": "^3.2.7",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.31",
     "lucide-react": "^0.263.1",
     "ol": "^8.2.0",
     "@react-oauth/google": "^0.12.1"
@@ -51,6 +51,9 @@
   },
   "overrides": {
     "nth-check": "^2.0.1",
-    "svgo": "^3.0.2"
+    "svgo": "^3.0.2",
+    "postcss": "^8.4.31",
+    "webpack-dev-server": "^5.0.0",
+    "resolve-url-loader": "^5.0.0"
   }
 } 
