--- a/nginx/dev.conf
+++ b/nginx/dev.conf
@@ -44,6 +44,14 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Backend specific settings - increased buffer sizes for large headers
+            proxy_buffering on;
+            proxy_buffer_size 16k;
+            proxy_buffers 16 16k;
+            proxy_busy_buffers_size 32k;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
         }
         
         # Backend documentation
