--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -21,6 +21,10 @@ http {
     tcp_nodelay     on;
     keepalive_timeout  65;
     types_hash_max_size 2048;
+    
+    # Header size limits - increase to handle large response headers
+    client_header_buffer_size 4k;
+    client_max_body_size 10m;
 
     # Gzip compression
     gzip on;
@@ -63,6 +67,9 @@ http {
         real_ip_header Fly-Client-IP;
         real_ip_recursive on;
         set_real_ip_from 0.0.0.0/0;
+        
+        # Header size limits for client requests
+        large_client_header_buffers 8 16k;
 
         # Frontend routes
         location / {
@@ -103,10 +110,34 @@ http {
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
             
-            # Backend specific settings
+            # Backend specific settings - increased buffer sizes for large headers
             proxy_buffering on;
-            proxy_buffer_size 4k;
-            proxy_buffers 8 4k;
+            proxy_buffer_size 16k;
+            proxy_buffers 16 16k;
+            proxy_busy_buffers_size 32k;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
+        }
+        
+        # Special handling for dive-sites endpoint that can have large headers
+        location ~ ^/api/v1/dive-sites/ {
+            # Rate limiting for API endpoints
+            limit_req zone=api burst=20 nodelay;
+            
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Fly-Client-IP $http_fly_client_ip;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
+            
+            # Optimized buffer settings for dive-sites endpoint
+            proxy_buffering on;
+            proxy_buffer_size 32k;
+            proxy_buffers 32 32k;
+            proxy_busy_buffers_size 64k;
             proxy_read_timeout 300s;
             proxy_connect_timeout 75s;
         }
