Fix HTML entity encoding in route descriptions
Replace innerHTML with textContent for secure HTML entity
decoding. Fix route description display to properly decode
entities like &#x27; back to apostrophes.

- Update htmlDecode utility to use textContent instead of
  innerHTML for XSS prevention
- Replace inline innerHTML usage in DiveDetail.js with
  utility function
- Apply HTML entity decoding to route descriptions in
  DiveDetail, RouteDetail, and DiveSiteMap pages
- Fix duplicate import in DiveSiteMap.js
- Reorganize imports for consistency

This ensures route descriptions display correctly (e.g.,
'there's' instead of 'there&#x27;s') while maintaining
security by using textContent which doesn't parse HTML.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "puppeteer": "^24.15.0"
   },
   "scripts": {
+    "postinstall": "npx update-browserslist-db@latest || true",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:prod": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
