Migrate frontend from Create React App to Vite & Fix Security Issues
Successfully migrated the frontend build system to Vite for improved performance and modern tooling, and resolved outstanding security vulnerabilities.

Key changes:
- Replaced `react-scripts` with `vite` and `@vitejs/plugin-react`
- Migrated testing framework from Jest to `vitest`
- Updated environment variables from `REACT_APP_` to `VITE_` prefix across codebase, deployment scripts, and documentation
- Configured `vite.config.js` with SVGR support and port 3000 compatibility
- Updated Dockerfiles and Nginx configuration to serve from `dist/` instead of `build/`
- Updated build scripts (`build-with-static-assets.sh`, `precompress-assets.sh`) to support the new output directory
- Configured Nginx development settings to allow access to `node_modules` and Vite internal paths
- Updated `deploy.sh` and `docker-compose` configuration for Vite environment
- Updated migration documentation (`docs/development/work/vite-migration-plan.md`)
- Resolved security vulnerabilities via `npm audit fix` (axios, glob, js-yaml, tar-fs)

Verification:
- Local development server starts successfully
- Production build works and generates content-hashed assets
- Docker image builds successfully
- Tests pass with Vitest
- Security audit passed

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -2,19 +2,19 @@
 # Copy this file to .env and modify with your values
 
 # API Configuration
-REACT_APP_API_URL=http://localhost/
+VITE_API_URL=http://localhost/
 
 # Google OAuth Configuration
 # Get these from Google Cloud Console: https://console.cloud.google.com/
-REACT_APP_GOOGLE_CLIENT_ID=your_google_client_id_here
+VITE_GOOGLE_CLIENT_ID=your_google_client_id_here
 
 # Cloudflare Turnstile Configuration
 # Get these from Cloudflare Dashboard: https://dash.cloudflare.com/?to=/:account/turnstile
-REACT_APP_TURNSTILE_SITE_KEY=your_turnstile_site_key_here
+VITE_TURNSTILE_SITE_KEY=your_turnstile_site_key_here
 
 # Development Settings
-REACT_APP_ENVIRONMENT=development
+VITE_ENVIRONMENT=development
 
 # Production Settings (uncomment for production)
-# REACT_APP_ENVIRONMENT=production
-# REACT_APP_API_URL=https://backend.your-domain.com
+# VITE_ENVIRONMENT=production
+# VITE_API_URL=https://backend.your-domain.com
