--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -66,7 +66,7 @@ services:
       - ./frontend:/app
       - /app/node_modules
     environment:
-      - REACT_APP_API_URL=http://localhost
+      - VITE_API_URL=http://localhost
       - NODE_ENV=development
     depends_on:
       - backend
