--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "antd-mobile": "^5.42.3",
     "antd-mobile-icons": "^0.3.0",
     "axios": "^1.3.4",
+    "canvas-confetti": "^1.9.4",
     "fuse.js": "^7.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
